Resolves: tdf#122992 allow pre-selected fonts not in the font list

Change-Id: I75c1b6d3933a5773d9e1dce40744c2342ab63ee8